--- a/css/grid-rtl.css
+++ b/css/grid-rtl.css
@@ -1,3 +1,9 @@
+/* -------------------------------------------------------- 
+ *  Centurion Framework v3.6.2 
+ *  Justin Hough (http://www.justinhough.com/) 
+ *  Licensed under GPL and MIT. 
+ * -------------------------------------------------------- */
+
 /* #7f4d7b */
 /* #277f35 */
 body {
