adding space before leading brace

--- a/lib/sass/centurion/_clearfix.scss
+++ b/lib/sass/centurion/_clearfix.scss
@@ -6,16 +6,17 @@
       content: " ";
       display: table;
     }
+
     &:after {
       clear: both;
     }
   }
-  
-  .clearfix,
-  .cf {
+
+  .cf,
+  .clearfix {
     @extend %clearfix;
   }
-  
+
   .clear {
     clear: both;
   }
